--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ img{
     width: 100%;
     height: 100vh;
     position: relative;
-    background: url("1.jpg") no-repeat center center/cover;
+    background: url("https://miro.medium.com/v2/resize:fit:1400/1*5lyavS59mazOFnb55Z6znQ.png") no-repeat center center/cover;
 }
 
 .showcase::after{
